--- a/calisma6.html
+++ b/calisma6.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<!--About W3Schools,başlıkta ki ilk kelimeyi görme-->
+<!--the title attribute-->
 <html>
 
 <head>
     <style>
-        a {
+        .anablok {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
 
-            font-weight: rgb(206, 112, 112);
-            color: rgb(54, 50, 50);
+        }
+
+
+
+
+
+        .menu {
+            background-color: #4285f4;
+        }
+
+        .menu a {
+            text-align: center;
+            font-weight: 800;
+            color: white;
             font-style: oblique;
             font-family: arial;
             text-decoration: none;
@@ -15,25 +31,128 @@
             display: inline-block;
             font-size: 25px;
             padding: 10px;
+            width: 12%;
+        }
+
+        .menu .active {
+            font-weight: 800;
+            color: white;
+            background-color: gray;
+            font-style: oblique;
+            font-family: arial;
+            text-decoration: none;
+            vertical-align: baseline;
+            display: inline-block;
+            font-size: 25px;
+            padding: 10px;
+            width: 12%;
+        }
+
+        .icerik {
+            width: 100%;
+            display: flex;
+            padding-bottom: 15px;
+            background-color: blanchedalmond;
+            
+        }
+
+        .sol-kısım {
+            width: 30%;
+            display: inline;
+        }
+
+        .sag-kısım {
+            width: 70%;
+            display: inline;
+        }
+
+        .footer a {
+            font-weight: 800;
+            color: white;
+            background-color: gray;
+            text-decoration: underline;
+            font-size: 15px;
+
+        }
+
+        .footer {
+            background-color: burlywood;
+            height: 50px;
         }
     </style>
+    <link rel="stylesheet" href="custom2.css">
 </head>
 
-<body style="background-color:pink">
-    <a href="index.html">Ana sayfa</a>
-    <a href="calisma.html">Çalışma1</a>
-    <a href="calisma2.html">Çalışma2</a>
-    <a href="calisma3.html">Çalışma3</a>
-    <a href="calisma4.html">Çalışma4</a>
-    <a href="calisma5.html">Çalışma5</a>
-    <a href="calisma6.html">Çalışma6</a><br>
+</html>
 
-    <h1>Baca dumanları tütüyor</h1>
-    <p title=Baca dumanları tütüyor>
-        İstanbul'da ki hava kirlilik oranının %40'ının bacalardan çıkan CO<sub>2</sub> sağlıyor
-        <p><b>
-                Eğer buna bir çözüm bulunmazsa kanser oranının artacağı düşünülüyor.</b></p>
-    </p>
+<body style="background-color:gainsboro">
+    <div class="anablok">
+        <div class="menu">
+            <a href="index.html">Ana sayfa</a>
+            <a class="active" href="calisma.html">YYÜ ÇALIŞMA</a>
+            <a href="calisma2.html">KLÜ ÇALIŞMA</a>
+            <a href="calisma3.html">Çalışma3</a>
+            <a href="calisma4.html">Çalışma4</a>
+            <a href="calisma5.html">Çalışma5</a>
+            <a href="calisma6.html">Çalışma6</a>
+        </div>
+        <div class="icerik">
+            <div class="leftside">
+                <p class="word">NAV</p>
+            </div>
+            <div class="rightside">
+                <div class="rightside-content">
+                    <div class="section">
+                        <div class="leftside1">
+                            <div style="width:80%;margin: auto;">
+                                <p class="sectionword">SECTİON</p>
+                                <div class="article">
+                                    <p class="articleword">ARTİCLE</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="rightside1">
+                            <div style="width:80%;margin: auto">
+                                <div class="aside">
+                                    <p class="asideword">ASİDE</p>
+                                </div>
+                                <div class="aside">
+                                    <p class="asideword">ASİDE</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section2">
+                        <div class="rightside2">
+
+                            <div class="aside1">
+                                <div class="asideword1">ASİDE</div>
+                            </div>
+
+                        </div>
+                        <div class="leftside2">
+                            <div class="sectionword">SECTİON</div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="footer"></div>
+
+
+
+
+
+
+    </div>
+
+
+
+
+
 </body>
 
 </html>
